Start modernizing the jax xml libraries used to be able to use recent jdks, this is going to be a long work