@@ -57,65 +57,17 @@
         <logback.version>1.2.6</logback.version>
         <lombok.version>1.18.22</lombok.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
-        <jar-plugin.version>3.2.0</jar-plugin.version>
         <reflections.version>0.9.12</reflections.version>
         <mockito.version>3.5.7</mockito.version>
-        <jaxb.version>2.3.1</jaxb.version>
+        <jaxb-api.version>3.0.1</jaxb-api.version>
+        <jaxb-impl.version>3.0.2</jaxb-impl.version>
         <dagger.version>2.40</dagger.version>
-        <jaxb-maven-plugin.version>0.14.0</jaxb-maven-plugin.version>
     </properties>
 
     <build>
 
         <pluginManagement>
             <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-assembly-plugin</artifactId>
-                    <version>3.3.0</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M5</version>
-                    <configuration>
-                        <argLine>
-                            --illegal-access=permit
-                        </argLine>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>3.0.0-M5</version>
-                    <configuration>
-                        <argLine>
-                            --illegal-access=permit
-                        </argLine>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>${jar-plugin.version}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>${maven.compiler.version}</version>
-                    <configuration>
-                        <release>${java.version}</release>
-                        <encoding>UTF-8</encoding>
-                    </configuration>
-                </plugin>
-
-                <!-- XML Schema to Java classes generation -->
-                <plugin>
-                    <groupId>org.jvnet.jaxb2.maven2</groupId>
-                    <artifactId>maven-jaxb23-plugin</artifactId>
-                    <version>${jaxb-maven-plugin.version}</version>
-                </plugin>
-
                 <!-- License plugin configuration for all modules under the GPL3-only -->
                 <plugin>
                     <groupId>com.mycila</groupId>
@@ -149,16 +101,6 @@
 
             </plugins>
         </pluginManagement>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>versions-maven-plugin</artifactId>
-                <version>2.7</version>
-                <configuration>
-                    <generateBackupPoms>false</generateBackupPoms>
-                </configuration>
-            </plugin>
-        </plugins>
     </build>
 
     <dependencyManagement>
@@ -177,12 +119,6 @@
                 <version>${lombok.version}</version>
                 <scope>provided</scope>
             </dependency>
-            <dependency>
-                <groupId>org.mapstruct</groupId>
-                <artifactId>mapstruct-processor</artifactId>
-                <version>1.4.2.Final</version>
-                <scope>provided</scope>
-            </dependency>
 
             <!-- JUnit 5 -->
             <dependency>
@@ -195,12 +131,6 @@
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter-engine</artifactId>
                 <version>${junit.jupiter.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.apiguardian</groupId>
-                <artifactId>apiguardian-api</artifactId>
-                <version>1.0.0</version>
                 <scope>test</scope>
             </dependency>
 
@@ -229,10 +159,17 @@
                 <version>${logback.version}</version>
             </dependency>
 
+            <!-- JAXB Dependencies -->
             <dependency>
-                <groupId>javax.xml.bind</groupId>
-                <artifactId>jaxb-api</artifactId>
-                <version>${jaxb.version}</version>
+                <groupId>jakarta.xml.bind</groupId>
+                <artifactId>jakarta.xml.bind-api</artifactId>
+                <version>${jaxb-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-impl</artifactId>
+                <version>${jaxb-impl.version}</version>
+                <scope>runtime</scope>
             </dependency>
 
             <!-- Runtime reflection on annotations -->
